@@ -47,7 +47,8 @@ Rectangle {
             width: 70; height: 28
             text: qsTr("Back")//返回
             onClicked: {
-                pageStack.pop();
+//                pageStack.pop();
+                pageStack.push(functioncollection);
             }
         }
         Column {
